# OCAML-Gomoku

./: .gitignore  README.md  mock_use.md
_build/: log
backend/: .gitignore  backend.opam  dune  dune-project
backend/_coverage/: index.html
backend/_coverage/src/: board.ml.html  minimax.ml.html
backend/src/: board.ml  board.mli  dune  game.mli  minimax.ml  minimax.mli  play.ml  server.ml
backend/test/: dune  tests.ml
gomoku/: dune-project
gomoku/_build/: .db  .digest-db  log
gomoku/_build/default/: gomoku.dune-package  gomoku.install
gomoku/_build/default/.dune/: configurator  configurator.v2
gomoku/_build/default/lib/: gomoku.cma  gomoku.cmxa  gomoku.cmxs
gomoku/_build/default/lib/.gomoku.objs/byte/: gomoku.cmi  gomoku.cmo  gomoku.cmt
gomoku/_build/default/lib/.gomoku.objs/native/: gomoku.cmx
gomoku/_build/default/lib/.merlin-conf/: lib-gomoku
gomoku/_build/default/test/.gomoku.eobjs/byte/: dune__exe__Gomoku.cmi  dune__exe__Gomoku.cmti
gomoku/_build/default/test/.gomoku.eobjs/native/: dune__exe__Gomoku.cmx
gomoku/_build/default/test/.merlin-conf/: exe-gomoku
gomoku/_build/install/default/lib/gomoku/: META  dune-package  opam
gomoku/lib/: dune
lib/: dune
src/: dune
