(lang dune 3.4)

(name backend)

(generate_opam_files true)

(authors "Justin Zhao" "Mihir Chakravarthi")

(maintainers "jzhao49@jhu.edu" "mihir.chakravarthi@gmail.com")

(package
 (name backend)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (allow_empty))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
