(library
 (name board)
 (modules board)
 (libraries core yojson ppx_deriving_yojson.runtime)
 (preprocess
  (pps bisect_ppx ppx_jane ppx_deriving_yojson)))

(library
 (name minimax)
 (modules minimax)
 (libraries core board)
 (preprocess
  (pps bisect_ppx ppx_jane)))

(executable
 (name play)
 (modules play)
 (libraries minimax board core dream yojson ppx_deriving_yojson.runtime)
 (preprocess
  (pps ppx_deriving_yojson ppx_jane lwt_ppx)))

(executable
  (name server)
  (modules server)
  (libraries minimax board core ppx_deriving_yojson.runtime dream yojson)
  (preprocess
    (pps ppx_deriving_yojson ppx_jane lwt_ppx)
  )
)
